--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -7,7 +7,6 @@ on:
   pull_request:
     branches: ["main"]
 
-
 jobs:
   benchmark:
     name: Run Go benchmark example
@@ -18,12 +17,19 @@ jobs:
       - name: Run benchmark
         run: go test -bench 'BenchmarkFib' | tee output.txt
 
+      - name: Download previous benchmark data
+        uses: actions/cache@v1
+        with:
+          path: ./cache
+          key: ${{ runner.os }}-benchmark
+
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: Go Benchmark
           tool: "go"
           output-file-path: output.txt
+          external-data-json-path: ./cache/benchmark-data.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: false
           # Show alert with commit comment on detecting possible performance regression
